# TriMPS_CGI14

./: README.md
TriMPS/: CMakeLists.txt  INSTALL_WIN.txt  readme.txt
TriMPS/Geex/: CMakeLists.txt
TriMPS/Geex/numerics/: optimizer.cpp  optimizer.h
TriMPS/data/: leaf.line  wavy.line
TriMPS/trimps/: CMakeLists.txt  delaunay.cpp  delaunay.h  delaunay_cgal.h  gap_compute.cpp  gap_compute.h  gap_primitive.h  geometry.h  grid.h  main.cpp  polygons.cpp  polygons.h
