
IF(WIN32)
  ADD_DEFINITIONS(-DGEEX_EXPORTS)
ELSE(WIN32)
  ADD_DEFINITIONS(-DBINARY_DIR=\\"${CMAKE_BINARY_DIR}\\")
  ADD_DEFINITIONS(-DPROJECT_ROOT=\\"${CMAKE_SOURCE_DIR}\\")
ENDIF(WIN32)

AUX_SOURCE_DIRECTORY(basics SOURCES)
AUX_SOURCE_DIRECTORY(mathematics SOURCES)
AUX_SOURCE_DIRECTORY(numerics SOURCES)
AUX_SOURCE_DIRECTORY(symbolics SOURCES)
AUX_SOURCE_DIRECTORY(properties SOURCES)
AUX_SOURCE_DIRECTORY(combinatorics SOURCES)
AUX_SOURCE_DIRECTORY(image SOURCES)

AUX_SOURCE_DIRECTORY(third_party/zlib SOURCES)
AUX_SOURCE_DIRECTORY(third_party/gzstream SOURCES)
AUX_SOURCE_DIRECTORY(third_party/misc SOURCES)

#file(GLOB HeaderFiles combinatorics/*.h)
ADD_LIBRARY(geex ${SOURCES} ${HeaderFiles})

IF (WIN32)
ADD_DEFINITIONS(-DNOMINMAX) 
ADD_DEFINITIONS(-DD3D10_IGNORE_SDK_LAYERS) 
ENDIF (WIN32)

SET(LINUX 1)

IF (CMAKE_CL_64)
SET(WIN32 0)
SET(WIN64 1)
ENDIF (CMAKE_CL_64)

IF (WIN32)
   TARGET_LINK_LIBRARIES(geex)
   SET_TARGET_PROPERTIES(geex PROPERTIES LINK_FLAGS "/INCREMENTAL /LARGEADDRESSAWARE")
   SET(LINUX 0)
ENDIF (WIN32)

IF (WIN64)
   TARGET_LINK_LIBRARIES(geex)
   SET_TARGET_PROPERTIES(geex PROPERTIES LINK_FLAGS_DEBUG "/NODEFAULTLIB:msvcrt /INCREMENTAL" LINK_FLAGS_RELEASE "/INCREMENTAL")
   SET(LINUX 0)   
ENDIF (WIN64)

IF (LINUX)
     TARGET_LINK_LIBRARIES(geex X11 Xext Xi)
ENDIF (LINUX)

IF (CMAKE_CL_64)
SET(WIN32 1)
SET(WIN64 0)
ENDIF (CMAKE_CL_64)

IF (WITH_GINAC)
   TARGET_LINK_LIBRARIES(geex ginac)
ENDIF (WITH_GINAC)
